force-app/main/default/objects/Cobros_Alta_Demanda__mdt/fields/Cobros_Dolares__c.field-meta.xml
<CustomField>
    <fullName>Cobros_Dolares__c</fullName>
    <label>Cobros Dolares</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>