force-app/main/default/objects/Cobros_Alta_Demanda__mdt/fields/Kilos__c.field-meta.xml
<CustomField>
    <fullName>Kilos__c</fullName>
    <label>Kilos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>