force-app/main/default/objects/Cobros_Alta_Demanda__mdt/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <label>Valor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>